test/zinc_source/compile_errors/functions/05_nonconstant_default.zn
// expected-error: default must be a literal or compile-time constant
fn add(x = other()) {
    return x
}

fn other() {
    return 1
}

fn main() {
    print(add())
}
